--- a/.github/workflows/upload-sarif.yml
+++ b/.github/workflows/upload-sarif.yml
@@ -19,4 +19,5 @@ jobs:
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
         with:
+          # Path to SARIF file relative to the root of the repository
           sarif_file: gh-fortify-sast.sarif
